--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(C_minus_compiler)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(C_minus_compiler main.cpp globals.h util.cpp util.h lexer.h parser.h gencode.cpp gencode.h globals.cpp symtab.h symtab.cpp analyze.h analyze.cpp gentiny.cpp
-        gentiny.h parser.tab.cpp lex.yy.cpp code.cpp code.h)
+add_executable(C_minus_compiler src/main.cpp src/globals.h src/util.cpp src/util.h src/lexer.h src/parser.h src/gencode.cpp src/gencode.h src/globals.cpp src/symtab.h src/symtab.cpp src/analyze.h src/analyze.cpp src/gentiny.cpp
+        src/gentiny.h parser.tab.cpp lex.yy.cpp src/code.cpp src/code.h)
